feat: add layout image

--- a/shelter/pages/main/main.scss
+++ b/shelter/pages/main/main.scss
@@ -149,8 +149,8 @@ body {
 
 	&__link_disabled:hover {
 		color: $color-light-xl;
-		padding-top: 3px;
-		border-bottom: solid 3px $color-primary;
+		// padding-top: 3px;
+		// border-bottom: solid 3px $color-primary;
 	}
 
 
